Aggiunge possibilità di prendere solo una foto
